k8s/strapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: felix-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - name: strapi
        image: ghcr.io/vuminhle1997/felix-nguyen-strapi-strapi:v1.0.5
        imagePullPolicy: Always
        ports:
        - containerPort: 1337
        volumeMounts:
        - name: strapi-data
          mountPath: /opt/app/public/uploads
      volumes:
      - name: strapi-data
        persistentVolumeClaim:
          claimName: strapi-data
---
apiVersion: v1
kind: Service
metadata:
  name: strapi
  namespace: felix-app
spec:
  type: ClusterIP
  ports:
  - port: 1337
    targetPort: 1337
  selector:
    app: strapi
